2009-07-16  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: When creating user controls make sure that we are
	hydrating if an x:Class type name is used.

2009-07-16  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxUndoActionInsert::.ctor): Now takes an
	'atomic' argument. If atomic is true, then the buffer is not
	growable. This is the behavior we want for TextBoxBase::Paste(),
	but not TextBoxBase::Commit() (which needs to allow growable
	insert actions so that Undo removes the string of text the user
	just typed as opposed to just the most recent character).
	(TextBoxBase::Paste): Pass 'true' as the 'atomic' argument to
	TextBoxUndoActionInsert::.ctor().

2009-07-16  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* uielement.h:
	* control.cpp:
	* uielement.cpp: 1) If the Control is not attached to a
	  subtree which has been loaded, don't propagate IsEnabled to
	  its children.
	2) Whenever a Control is loaded we traverse it's visual
	  parents until we find another control and propagate the
	  IsEnabled state.

2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h: mark the ViewportOrigin and ViewportWidth
	properties as AlwaysChange. fix drt #291.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Retrieve all instance variables we need
	into local variables before decreasing the refcount. If the
	refcount is > 0 after decreasing it, we can't access instance
	variables anymore, since another thread might have unreffed which
	would cause the object to be deleted already.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: #if DEBUG -> #if SANITY and fix a typo in
	a comment.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Add sanity check for refcount < 0.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Move sanity verification into #if SANITY.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>
