@@ -1,3 +1,8 @@
+2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* mediaelement.cpp|h: Make ReportErrorOccurred thread-safe. Managed code might
+	call us from a worker thread.
+
 2009-07-16  Jackson Harper  <jackson@ximian.com>
 
 	* xaml.cpp: When creating user controls make sure that we are
